# maintainers-copilot

./: .env.example  .gitignore  ARCH.md  CONSTITUTION.md  DECISIONS.md  Dockerfile  RUNBOOK.md  alembic.ini  docker-compose.yml  eval_thresholds.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_rag_chunks.py  0003_chatbot.py  0004_chatbot_part2.py
app/: config.py  main.py
app/bootstrap/: __init__.py  admin_bootstrap.py
app/domain/: audit.py  auth.py  chat.py  conversation.py  health.py  memory.py  ner.py  retrieve.py  summarize.py  widget.py
app/infra/: anthropic_client.py  auth_backend.py  database.py  database_async.py  embedding_client.py  log_redaction.py  minio_client.py  model_server_client.py  redis_client.py  request_context.py  reranker_client.py  tracing.py  vault_client.py
app/repositories/: audit_repository.py  chunk_repository.py  conversation_repository.py  health_repository.py  memory_repository.py  user_repository.py  widget_repository.py
app/services/: auth_service.py  chatbot_service.py  classifier_service.py  health_service.py  hyde_service.py  ner_service.py  retrieve_service.py  short_term_memory_service.py  summarize_service.py
evals/chatbot/: README.md  __init__.py  eval_chatbot.py  fixture_outputs.jsonl  golden.jsonl
evals/classification/: README.md  eval_classification.py  golden.jsonl  last_eval.json
evals/ner/: README.md  eval_ner.py  fixture_outputs.jsonl  golden.jsonl  sample.jsonl  score.py
evals/rag/: README.md  alpha_sweep.json  baseline.json  eval_rag.py  golden.jsonl  score.py  sweep_alpha.py
evals/summarize/: README.md  eval_summarize.py  fixture_outputs.jsonl  golden.jsonl
model_server/: Dockerfile  boot_check.py  config.py  embed.py  inference.py  main.py  ner.py  prompts.py  rerank.py  state.py  storage.py  tracing.py
model_server/routers/: __init__.py  classify.py  embed.py  ner.py  rerank.py  summarize.py
notebooks/: embed_corpus_on_colab.md  finetune_distilbert.ipynb
prompts/: chatbot_system.md  hyde.md  llm_baseline_classifier.md  ner.md  rag_answer.md  rag_judge.md  summarize_judge.md  summarizer.md
scripts/: vault_seed.sh
scripts/ci/: seed_classifier_artifact.sh  seed_rag_corpus.sh
scripts/dataset/: build_splits.py  fetch_issues.py  fetch_issues_graphql.py  inventory_labels.py  label_map.yaml  observed_labels.txt
scripts/eval/: build_classification_golden.py  llm_baseline_classifier.py
scripts/rag/: build_corpus.py  chunk_naive.py  chunk_parent_document.py  embed_and_upsert.py  fetch_docs.py  fetch_issues_held_out.py  import_embeddings.py
specs/001-foundations/: tasks.md
specs/002-chatbot-part1-foundations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chatbot-part2-brain/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+107 files in other folders)
