[project]
name = "maintainers-copilot"
version = "0.1.0"
description = "Maintainer's Copilot — AIE Week 7 project"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "hvac>=2.3",
  "redis>=5.1",
  "boto3>=1.35",
  "httpx>=0.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "arize-phoenix>=5.0",
  "pyyaml>=6.0",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "psycopg[binary]>=3.2",
  "anthropic>=0.40",
]

[dependency-groups]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "types-pyyaml",
  "pandas-stubs",
]
# The model server image installs the `ml` group on top of base deps.
# transformers is pinned to 4.57.6 to match the Colab training environment
# (transformers 5.x has a LayerNorm key regression that breaks state_dict
# loads from the published run). torch 2.8+ matches Colab 2.8.0+cu128; CPU
# inference is used on the backend.
ml = [
  "torch>=2.8,<3",
  "transformers==4.57.6",
  "tokenizers>=0.20",
  "safetensors>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Colab notebooks have cell-scoped imports (E402 by construction); they are
# exploratory and not part of the linted/typed surface.
extend-exclude = ["notebooks", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "model_server"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]